    * Changed the minimum default send_async and send_sync timeout value
      for service configuration from 101 milliseconds to 499 milliseconds
      (based on current macros) to be consistent with
      limit_min and limit_max use
    * Erlang type cloudi_service_api:timeout_milliseconds() was removed and
      split into more specific types

2017-01-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * The Erlang cloudi_service and cloudi modules now use the atom
      limit_min instead of immediate for the timeout value, to represent
      the largest timeout value possible to avoid timer use
      (499 milliseconds with the current macro definitions) though the minimum
      timeout value remains 0 for these functions
      (limit_min/limit_max will later also be used for timeout configuration)
      * The immediate atom usage is retained to allow removal in a future
        CloudI release, though dialyzer currently lacks the ability to
        deprecate an Erlang type specification, so this change requires
        human attention that doesn't rely on tools to detect
    * The Erlang cloudi_service and cloudi modules now accept the atom
      limit_max as the timeout value which is the maximum possible
      (4294967195 milliseconds with the current macro definitions,
       i.e., 49.7 days)

2017-01-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Ensure all CloudI API implementations can handle a null object return
      value, if the concept of null exists in the programming language
      (required updating the Java and Perl CloudI APIs,
       since the rest already handle this)
    * Add the null integration tests in all the supported programming languages
    * The C/C++ CloudI API now makes stdout usage unbuffered
      (to be consistent with the other CloudI API implementations,
       which have stdout/stderr unbuffered so the output is
       logged as quickly as possible)

2017-01-05 Michael Truog   <mjtruog [at] gmail (dot) com>
